<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_app_name">DestPicker</string>
    <string name="welcome_app_name">Welcome</string>
    <string name="server_and_port">please enter IP:PORT of GreenNav Server</string>
    <string name="connect">Connect</string>
    <string name="navi_app_name">Navigator</string>
    <string name="location">Location: </string>
    <string name="destination">Destination: </string>
    <string name="heading">Course:  °, heading: </string>
    <string name="distance">Distance to next node: </string>
    <string name="eta">ETA:</string>
    <string name="sub_app_name">SubApp</string>
    <string name="action_search">search</string>
    <string name="action_settings">settings</string>
    <string name="evaluation_mode">evaluation mode</string>
    <string name="detail_mode">navigation details</string>
    <string name="get_heading">Get my Heading</string>
    <string name="info_button">Info</string>
    <string name="contact_button">Contact</string>

    <string-array name="languages">
        <item>Deutsch</item>
        <item>English</item>
    </string-array>
</resources>